# a2c_ase

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
a2c_ase/: mlj.py  runner.py  utils.py
a2c_ase/potentials/: soft_sphere.py
api/potentials/: index.html
api/runner/: index.html
api/utils/: index.html
data/: Na_2000.xyz
development/contributing/: index.html
docs/: .pages  index.md
docs/api/: potentials.md  runner.md  utils.md
docs/development/: contributing.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/potentials/: multi-lj.md  overview.md  soft-sphere.md
docs/stylesheets/: extra.css
docs/user-guide/: workflow.md
example/: Si64.py  cell_extraction.py  hull.py
examples/: final_crystal_structure.cif  index.html
examples/Si64/: Si64.ipynb  index.html
examples/cell_extraction/: cell_extraction.ipynb  index.html
examples/hull/: hull.ipynb  index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
potentials/multi-lj/: index.html
potentials/overview/: index.html
potentials/soft-sphere/: index.html
search/: search_index.json
tests/: test_utils.py
tests/potentials/: test_potentials.py
user-guide/workflow/: index.html
