[project]
name = "a2c_ase"
version = "0.0.1"
description = "ASE friendly implementation of the a2c workflow with MLIPs"
authors = [
    { name = "Abhijeet Gangan", email = "flyingicecube42@gmail.com" },
    { name = "Abhijeet Gangan", email = "abhijeetgangan@g.ucla.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "ase",
    "numpy",
    "pymatgen",
    "tqdm",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["a2c_ase*"]
exclude = ["example*"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".env",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "example",
]

# Allow lines to be as long as 100 characters.
line-length = 100

# Target Python 3.9+
target-version = "py39"

# Allow autofix for all enabled rules (when `--fix` is passed).
fixable = ["ALL"]

# Sort imports.
[tool.ruff.isort]
known-first-party = ["a2c_ase"]
