[project]
name = "a2c_ase"
version = "0.0.1"
description = "ASE friendly implementation of the a2c workflow with MLIPs"
authors = [{ name = "Abhijeet Gangan", email = "abhijeetgangan@g.ucla.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["ase", "numpy", "pymatgen", "tqdm"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "ty"]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["a2c_ase*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I"]

[tool.ruff.isort]
known-first-party = ["a2c_ase"]
